<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="download_text">The %s repository is downloaded</string>

    <string name="project_3">Project 3</string>
    <string name="glide">Glide</string>
    <string name="retrofit">Retrofit</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="download_image">download image</string>
    <string name="glide_radiobutton_text">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_radiobutton_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_radiobutton_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="please_select_file">Please select the file to download</string>
    <string name="notification_channel_name">Downloads channel</string>
    <string name="check_status">Check the status</string>
    <string name="file_name_label">File name:</string>
    <string name="status_label">Status</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="running">Running</string>
</resources>
